--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,17 @@
-<h1>FORM de upload</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>FORM de upload</h1>
 
-<form method="post" enctype="multipart/form-data" action="/upload">
-    <input type="file" name="file">
-    <input type="submit" value="upload">
-</form>
+    <form method="post" enctype="multipart/form-data" action="/upload">
+        <input type="file" name="file">
+        <input type="submit" value="upload">
+    </form>
+
+</body>
+</html>
