--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>FORM de upload</h1>
 
-    <form method="post" enctype="multipart/form-data" action="/upload">
+    <form method="post" enctype="multipart/form-data" action="/pdf">
         <input type="file" name="file">
         <input type="submit" value="upload">
     </form>
